refs #85 - add stock traceability prototype
