# fgt-api/participants/mah/api/index.js
@@ -1,6 +1,7 @@
 const ProductApi = require('../../../api/product');
 const BatchApi = require('../../../api/batch');
 const StockApi = require('../../../api/stock');
+const StockTraceabilityApi = require('../../../api/stockTraceability');
 const SaleApi = require('../../../api/sale');
 const ReceiptApi = require('../../../api/receipt');
 const ShipmentApi = require('../../../api/shipment');
@@ -14,6 +15,7 @@ module.exports = {
     ProductApi,
     BatchApi,
     StockApi,
+    StockTraceabilityApi,
     SaleApi,
     ReceiptApi,
     ShipmentApi,
